<resources>
    <string name="app_name">ClashRoyaleAPP</string>
    <string name="title_activity_estrategia">Estrategia</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="menu">Menu</string>
    <string name="epicas">Epicas</string>
    <string name="lendarias">Lendarias</string>
    <string name="comuns">Comuns</string>
    <string name="cartas">Cartas</string>
    <string name="baixar">Baixar</string>
    <string name="voltar">Voltar</string>
    <string name="site">Site</string>
    <string name="video">Video</string>
    <string name="txtcartas"> É um fato conhecido de todos que um leitor se distrairá com o conteúdo de texto legível de uma página quando estiver examinando sua diagramação. A vantagem de usar Lorem Ipsum é que ele tem uma distribuição normal de letras, ao contrário de &quot;Conteúdo aqui, conteúdo aqui&quot;, fazendo com que ele tenha uma aparência similar a de um texto legível. Muitos softwares de publicação e editores de páginas na internet agora usam Lorem Ipsum como texto-modelo padrão, e uma rápida busca por lorem ipsum mostra vários websites ainda em sua fase de construção. Várias versões novas surgiram ao longo dos anos, eventualmente por acidente, e às vezes de propósito (injetando humor, e coisas do gênero).</string>
    <string name="txttitulocartas">CARTAS E ARENAS</string>
    <string name="txtepicas">CARTAS EPICAS</string>
    <string name="txtlendarias">CARTAS LENDARIAS</string>
    <string name="txtcartasearenas">O Clash Royale é um jogo de estratégia em que consiste em você derrubar primeiro as três torres do adversário para poder vencer a partida. A cada vitória o jogador recebe baús e troféus para prosseguir para a próxima arena. O jogo possui 21 arenas, sendo a Arena Lendária a última. Quanto mais arenas o jogador avançar, mais cartas ficam disponíveis para ganhar e mais jogadores bons ele enfrentará.  Há vários baús com recompensas variadas, que vão desde o baú de madeira, que possui poucas recompensas, até o baú lendário, aonde você pode ganhar uma carta lendária. As cartas possuem vários tipos de determinadas raridades, desde comuns até as lendárias. As cartas podem ser obtidas na loja e através de baús. Além das raridades, as cartas são distribuídas entre Tropas, Estruturas e Feitiços.</string>
    <string name="txttropas">Geralmente estas cartas possuem um custo médio de elixir, variando entre 3 a 5, e atacam tropas terrestres ou aéreas, curta ou longa distância, sendo os de longa distância muito bons ao enfrentar tropas que possuem 2 ou mais unidades, como os Servos. Exemplos de cartas: Cavaleiro, Príncipe, Valquíria, Bruxa, Mago, Mago de Gelo, Princesa, Executor, Mosqueteira, Mago Elétrico, Lenhador e Bandida.</string>
    <string name="txtconteudoepicas">As Cartas Épicas do Clash Royale, são as cartas de bastante destaque no jogo, ficando atrás apenas para as Cartas Lendárias. Dentre as principais temos a Bruxa, Balão, Canhão e PEKKA!</string>
    <string name="txtconteudolendarias">Em Clash Royale, uma das peças fundamentais na criação dos melhores decks são as cartas lendárias. Não há dúvidas de que essas poderosas cartas vão ser de grande ajuda para alcançar a vitória. Clash Royale oferece 17 cartas lendárias ao todo, que vão do nível nove ao 13. Os jogadores podem obtê-las comprando baús Super Mágicos, por 40 mil de ouro na loja do game, ou tendo a sorte de as encontrar em baús normais.</string>

</resources>