<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Epicas">

    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="625dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="386dp"
            android:layout_height="538dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtepicas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtepicas"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="34sp" />

                <ImageView
                    android:id="@+id/imgepica"
                    android:layout_width="match_parent"
                    android:layout_height="568dp"
                    android:layout_marginTop="50dp"
                    app:srcCompat="@drawable/epicas" />

                <TextView
                    android:id="@+id/txtepicascartas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/txtconteudoepicas"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnvoltar3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="130dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/voltar" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>