<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Cartas">

    <LinearLayout
        android:layout_width="404dp"
        android:layout_height="601dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtcarta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txttitulocartas"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="272dp"
                    app:srcCompat="@drawable/arenas"
                    tools:srcCompat="@drawable/arenas"
                    android:importantForAccessibility="no" />

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtcartasearenas"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imgdeck"
                    android:layout_width="match_parent"
                    android:layout_height="348dp"
                    android:layout_marginTop="50dp"
                    app:srcCompat="@drawable/deck"
                    android:contentDescription="TODO" />

                <Button
                    android:id="@+id/btnvoltar1"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginHorizontal="150dp"
                    android:layout_marginTop="80dp"
                    android:scrollbarSize="4dp"
                    android:text="@string/voltar"
                    app:iconSize="18dp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>